--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,16 @@
 
 # dependencies
 /node_modules
+react-nss-db/node_modules
+
 
 # testing
 /coverage
+react-nss-db/coverage
 
 # production
 /build
+react-nss-db/build
 
 # misc
 .DS_Store
