--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # stuffThatsNotAssignment
-/gruntDemo
+gruntDemo
 
 # dependencies
-/node_modules
+node_modules
 
 # built 
-/dist
+dist
 
 # testing
 /coverage
